[package]
name = "conqur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.13", features = ["ws"] }
tokio = { version = "1.20.0", features = ["full"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"