[package]
name = "conqur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = { version = "0.5.13", features = ["ws"] }
tokio = { version = "1.20.0", features = ["full"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.9.11"
dotenvy = "0.15.3"
bcrypt = "0.13.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
anyhow = "1.0.64"
sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["fs"] }